# purzos-ofx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD-PARTY.md  build.ps1
.github/workflows/: release.yml
ascii/: ascii.cpp
badsignal/: badsignal.cpp
bitcrush/: bitcrush.cpp
bleach/: bleach.cpp
blockmosh/: blockmosh.cpp
bloom/: bloom.cpp
bulge/: bulge.cpp
channeldelay/: channeldelay.cpp
chromableed/: chromableed.cpp
chromashift/: chromashift.cpp
chromatic/: chromatic.cpp
chromaticaberration/: chromaticaberration.cpp
colorunder/: colorunder.cpp
common/: purzfx.hpp
crosshatch/: crosshatch.cpp
crossprocess/: crossprocess.cpp
crtscreen/: crtscreen.cpp
databend/: databend.cpp
dither/: dither.cpp
dotcrawl/: dotcrawl.cpp
dropout/: dropout.cpp
duotone/: duotone.cpp
edgeenhance/: edgeenhance.cpp
errordiffuse/: errordiffuse.cpp
feedback/: feedback.cpp
fisheye/: fisheye.cpp
ghost/: ghost.cpp
glass/: glass.cpp
glyphblocks/: glyphblocks.cpp
gradientmap/: gradientmap.cpp
halation/: halation.cpp
halftone/: halftone.cpp
headswitch/: headswitch.cpp
hum/: hum.cpp
infrared/: infrared.cpp
interlace/: interlace.cpp
kaleidoscope/: kaleidoscope.cpp
linestutter/: linestutter.cpp
lumaring/: lumaring.cpp
melt/: melt.cpp
mirrortile/: mirrortile.cpp
mosaic/: mosaic.cpp
nightvision/: nightvision.cpp
overscan/: overscan.cpp
phosphormelt/: phosphormelt.cpp
pixelsort/: pixelsort.cpp
posterize/: posterize.cpp
rainbowphase/: rainbowphase.cpp
ripple/: ripple.cpp
rollbar/: rollbar.cpp
scanlines/: scanlines.cpp
scanwarp/: scanwarp.cpp
shadowmask/: shadowmask.cpp
sliceglitch/: sliceglitch.cpp
snow/: snow.cpp
solarize/: solarize.cpp
syncdrift/: syncdrift.cpp
tapewow/: tapewow.cpp
thermal/: thermal.cpp
threshold/: threshold.cpp
trackingbar/: trackingbar.cpp
twirl/: twirl.cpp
vectorrescan/: vectorrescan.cpp
vignette/: vignette.cpp
waveshear/: waveshear.cpp
